# aoc-2019

./: .gitignore  CMakeLists.txt  README.md  aoc2019.cabal  package.yaml
cc/: 001.c  002.c  003.c  004.c  005.c  006.c  009.c  011.c  012.c  013.c  015.c  016.c  018.cpp  020.cpp  022.c  023.c  CMakeLists.txt  aoc.c  aoc.h  intcode.c  intcode.h  main.c  solver.h
src/: AOC001.hs  AOC002.hs  AOC003.hs  AOC004.hs  AOC005.hs  AOC006.hs  AOC007.hs  AOC008.hs  AOC009-Polysemy.hs  AOC009.hs  AOC010.hs  AOC011.hs  AOC012.hs  AOC013.hs  AOC014.hs  AOC015.hs  AOC016.hs  AOC017.hs  AOC019.hs  AOC021.hs  AOC022.hs  IntCode.hs  IntCodePolysemy.hs  Main.hs  Solver.hs
src/AOC009/: Polysemy.hs
